--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 SetEnv DB_SERVER localhost
-SetEnv DB_USERNAME root
-SetEnv DB_PASSWORD root
-SetEnv DB_NAME idm232_db
+SetEnv DB_USERNAME vpl26
+SetEnv DB_PASSWORD EwIId5gNy+npP/Fx
+SetEnv DB_NAME vpl26_db
 
